fixed spacing issues with body

--- a/sass/index.sass
+++ b/sass/index.sass
@@ -28,11 +28,13 @@ p
 #main-wrapper
   margin-bottom: -19.25vw
   overflow: hidden
+  position: absolute
+  top: 0
 
 //Parallax banner for landing
 #banner
   height: 25vw
-  min-height: 25vh
+  min-height: 350px
   width: 100%
   background-color: grey
   display: flex
@@ -71,7 +73,6 @@ p
   position: absolute
   width: 15vw
   bottom: 0
-  // background-color: grey
 
 #logo-text-trusting
   left: -100%
@@ -120,7 +121,6 @@ p
 
 .body-text
   width: 22.5vw
-  min-width: 30vh
   padding: 1.5vw 1.5vw 2vw 1.5vw
   height: auto
   background-color: rgba(250, 250, 250, 0.7)
